--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
+/*FONT*/
 @import url(http://fonts.googleapis.com/css?family=Pacifico|Open+Sans|Montserrat);
+
 body, html {
   width: 100%;
   background-color: black;
@@ -26,24 +28,25 @@ body, html {
 }
 .calculator input[type='text'] {
   background-color: white;
-  border: 1px solid #e6e6e6;
-  line-height: 40px;
-  width: 80%;
-  font-size: 2em;
-  direction: rtl;
+  border: 1px solid white;
+  line-height: 50px;
+  width: 85%;
+  font-size: 30px;
+  direction: left;
   font-family: 'Montserrat';
   padding-right: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
-  box-shadow: inset 0px -2px 10px #e6e6e6;
 }
 .calculator input[type='text']:focus {
   outline: none;
 }
+
+/*ROWS*/
 .calculator .row {
   display: block;
 }
-.calculator .row button {
+.calculator .row input {
   width: 55px;
   height: 37px;
   border: 1px solid black;
@@ -60,25 +63,6 @@ body, html {
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 8px;
-  box-shadow: inset 0 1px 4px #333333, inset 0 -4px 20px black, 0 3px 1px 0 black;
-}
-.calculator .row button:focus {
-  outline: 0;
-}
-.calculator .row button:active {
-  background-image: -webkit-linear-gradient( bottom , black, black);
-  background-image: linear-gradient(to top, black, black);
-}
-.calculator .row .ctrl {
-  border: 1px solid #CC4E5F;
-  border-top: 2px solid #e39da7;
-  background-image: -webkit-linear-gradient( top , #CC4E5F, #b33445);
-  background-image: linear-gradient(to bottom, #CC4E5F, #b33445);
-  box-shadow: inset 0 1px 4px #e39da7, inset 0 -4px 20px #b33445;
-}
-.calculator .row .ctrl:active {
-  background-image: -webkit-linear-gradient( bottom , #CC4E5F, #b33445);
-  background-image: linear-gradient(to top, #CC4E5F, #b33445);
 }
 .calculator .row .long {
   width: 123px;
